@@ -241,6 +241,45 @@ decl_stmt|;
 block|}
 annotation|@
 name|Test
+argument_list|(
+name|expected
+operator|=
+name|SQLException
+operator|.
+name|class
+argument_list|)
+DECL|method|testConnectionStringJumbled
+specifier|public
+name|void
+name|testConnectionStringJumbled
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|sampleZkHost
+init|=
+literal|"zoo1:9983/foo"
+decl_stmt|;
+name|DriverManager
+operator|.
+name|getConnection
+argument_list|(
+literal|"solr:jdbc://"
+operator|+
+name|sampleZkHost
+operator|+
+literal|"?collection=collection1"
+argument_list|,
+operator|new
+name|Properties
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testProcessUrl
 specifier|public
 name|void
