@@ -80,6 +80,15 @@ name|java
 operator|.
 name|sql
 operator|.
+name|SQLException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
 name|Statement
 import|;
 end_import
@@ -2911,6 +2920,98 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testSQLExceptionThrownWhenQueryAndConnUseDiffCollections
+specifier|public
+name|void
+name|testSQLExceptionThrownWhenQueryAndConnUseDiffCollections
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|badCollection
+init|=
+name|COLLECTION
+operator|+
+literal|"bad"
+decl_stmt|;
+name|String
+name|connectionString
+init|=
+literal|"jdbc:solr://"
+operator|+
+name|zkHost
+operator|+
+literal|"?collection="
+operator|+
+name|badCollection
+decl_stmt|;
+name|String
+name|sql
+init|=
+literal|"select id, a_i, a_s, a_f from "
+operator|+
+name|badCollection
+operator|+
+literal|" order by a_i desc limit 2"
+decl_stmt|;
+comment|//Bad connection string: wrong collection name
+try|try
+init|(
+name|Connection
+name|connection
+init|=
+name|DriverManager
+operator|.
+name|getConnection
+argument_list|(
+name|connectionString
+argument_list|)
+init|)
+block|{
+try|try
+init|(
+name|Statement
+name|statement
+init|=
+name|connection
+operator|.
+name|createStatement
+argument_list|()
+init|)
+block|{
+try|try
+init|(
+name|ResultSet
+name|ignored
+init|=
+name|statement
+operator|.
+name|executeQuery
+argument_list|(
+name|sql
+argument_list|)
+init|)
+block|{
+name|fail
+argument_list|(
+literal|"Expected query against wrong collection to throw a SQLException."
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|SQLException
+name|ignore
+parameter_list|)
+block|{
+comment|// Expected exception due to miss matched collection
 block|}
 block|}
 annotation|@
